Fix the text color of disabled dates in dark mode

--- a/src/style.less
+++ b/src/style.less
@@ -599,6 +599,10 @@ hr {
                 border-color: @color-primary-darker;
             }
 
+            &.disabled {
+                color: @text-color-muted;
+            }
+
             &.today {
                 border-color: @color-primary-darker;
             }
